# Lzma

./: .gitignore  .travis.yml  CMakeLists.txt  Package.swift  README.md
Sources/CLzma/: clzma_base_coder.cpp  clzma_base_coder.h  clzma_base_extract_callback.cpp  clzma_base_extract_callback.h  clzma_common.cpp  clzma_common.h  clzma_error.cpp  clzma_error.h  clzma_extern.cpp  clzma_extern.h  clzma_extract_callback.cpp  clzma_extract_callback.h  clzma_file_decoder.cpp  clzma_file_decoder.h  clzma_file_encoder.cpp  clzma_file_encoder.h  clzma_in_file.cpp  clzma_in_file.h  clzma_item.c  clzma_item.cpp  clzma_item.h  clzma_memory.c  clzma_mutable_item.c  clzma_mutable_item.h  clzma_open_callback.cpp  clzma_open_callback.h  clzma_out_file.cpp  clzma_out_file.h  clzma_out_streams.cpp  clzma_out_streams.h  clzma_path.cpp  clzma_path.h  clzma_private.h  clzma_reader.cpp  clzma_reader.h  clzma_reader1.cpp  clzma_reader1.h  clzma_string.cpp  clzma_string.h  clzma_update_callback.cpp  (+4 more)
Sources/CLzma/C/: 7zTypes.h  Bcj2Enc.c  Precomp.h
Sources/CLzma/CPP/7zip/Archive/: DllExports2.cpp  StdAfx.h
Sources/CLzma/CPP/7zip/Archive/7z/: 7zHandler.cpp
Sources/CLzma/CPP/7zip/Archive/Common/: StdAfx.h
Sources/CLzma/CPP/7zip/Common/: FilterCoder.cpp  InOutTempBuffer.cpp  InOutTempBuffer.h  StdAfx.h  StreamUtils.cpp
Sources/CLzma/CPP/7zip/Compress/: Lzma2Decoder.cpp  LzmaDecoder.cpp
Sources/CLzma/CPP/Common/: Common.h  MyGuidDef.h  MyString.h  MyVector.h  MyWindows.cpp  MyWindows.h  StdAfx.h
Sources/CLzma/CPP/Windows/: PropVariantConv.cpp  StdAfx.h  Synchronization.h
Sources/CLzma/include/: module.modulemap
Sources/Lzma/: LzmaCommon.swift  LzmaError.swift  LzmaItem.swift  LzmaMutableItem.swift  LzmaObject.swift  LzmaReader.swift  LzmaWriter.swift  String+UnsafeMutablePointer.swift  UnsafePointer+String.swift
Sources/clzma/: clzma_string.h
Sources/lzma_wrp/: lzma_wrp.h  lzma_wrp_base_coder.cpp  lzma_wrp_base_coder.h  lzma_wrp_common.cpp  lzma_wrp_common.h  lzma_wrp_error.cpp  lzma_wrp_error.h  lzma_wrp_extern.cpp  lzma_wrp_extern.h  lzma_wrp_extract_callback.cpp  lzma_wrp_extract_callback.h  lzma_wrp_file_decoder.cpp  lzma_wrp_file_decoder.h  lzma_wrp_file_encoder.cpp  lzma_wrp_file_encoder.h  lzma_wrp_in_file.cpp  lzma_wrp_in_file.h  lzma_wrp_item.c  lzma_wrp_item.h  lzma_wrp_memory.c  lzma_wrp_mutable_item.c  lzma_wrp_mutable_item.h  lzma_wrp_open_callback.cpp  lzma_wrp_open_callback.h  lzma_wrp_out_file.cpp  lzma_wrp_out_file.h  lzma_wrp_path.cpp  lzma_wrp_path.h  lzma_wrp_private.h  lzma_wrp_reader.cpp  lzma_wrp_reader.h  lzma_wrp_update_callback.cpp  lzma_wrp_update_callback.h  lzma_wrp_writer.cpp  lzma_wrp_writer.h
Sources/lzma_wrp/C/: 7zTypes.h  Precomp.h
Sources/lzma_wrp/CPP/7zip/Archive/: DllExports2.cpp  StdAfx.h
Sources/lzma_wrp/CPP/7zip/Archive/7z/: 7zHandler.cpp
Sources/lzma_wrp/CPP/7zip/Archive/Common/: StdAfx.h
Sources/lzma_wrp/CPP/7zip/Common/: FilterCoder.cpp  InOutTempBuffer.cpp  InOutTempBuffer.h  StdAfx.h  StreamUtils.cpp
Sources/lzma_wrp/CPP/7zip/Compress/: Lzma2Decoder.cpp  LzmaDecoder.cpp
Sources/lzma_wrp/CPP/Common/: Common.h  MyGuidDef.h  MyString.h  MyVector.h  MyWindows.cpp  MyWindows.h  StdAfx.h
Sources/lzma_wrp/CPP/Windows/: PropVariantConv.cpp  StdAfx.h  Synchronization.h
Sources/lzma_wrp/include/: module.modulemap
Tests/: LinuxMain.swift
Tests/LzmaTests/: LzmaTests.swift
